Contract Configurator 0.8.2
- Fixed performance around updates to stock contracts app.
- Fix indentation in debug window.
- Remove obsolete parameters and attributes.

Contract Configurator 1.0.0
- Various fixes related to KSP 1.0.
- Deprecated parameters removed from stock (some will get replacements in a future version of Contract Configurator).
    - AltitudeRecord
    - LaunchVessel
- Added new AtLeast and AtMost set parameters.
- Added new None set parameter.
- Improve validation rules for unknown attributes/child nodes (helps modders track down issues more easily).
- Fix issue when reloading contracts within a hierarchy of contract groups.
- Fix issue when loading a save game with RemoteTech when a previously installed planet pack is uninstalled (thanks Svm420 and magico13).
- Pop up a warning dialog when a ScenarioModule fails to load (and prevent other ScenarioModules from also failing).
- Improve error messaging when failing on loading types from assemblies (thanks Vladthemad).
- Fix default value of index for VisitWaypoint parameter (thanks AlphaAsh).
Contract Configurator 0.7.15
- Fix for re-loading passengers in tourism contracts (thanks karki and others).
- Remove obsolete parameters and attributes.

Contract Configurator 0.7.14
- Expressions now work in child nodes (for WaypointGenerator and other behaviours that support it).
- Fix issues with fairness when generating contracts (should now give appropriate consideration to all contract packs).
- Fix errors in Tourism contract pack introduced by 0.7.13.
- Minor bug fixes.

Contract Configurator 0.7.13
- Fix exception when loading types from assemblies that have been improperly compiled (thanks SpacedInvader).

Contract Configurator 0.7.12
- Fix issue when loading part names with non-standard characters (thanks tattagreis).
- Fix issue with using custom behaviours.
- Can now provide multiple techs, parts and part modules in PartModuleUnlocked, PartUnlocked and TechResearched requirements.