@@ -225,8 +225,10 @@ namespace ContractConfigurator
                         style = yellowLabel;
                     }
 
+                    bool atLeastOne = false;
                     foreach (ContractType contractType in guiContracts.Where(ct => ct.group == contractGroup))
                     {
+                        atLeastOne = true;
                         if (!contractType.enabled)
                         {
                             style = redLabel;
@@ -236,6 +238,12 @@ namespace ContractConfigurator
                         {
                             style = yellowLabel;
                         }
+                    }
+
+                    // Need at least one contract in the group
+                    if (!atLeastOne)
+                    {
+                        style = yellowLabel;
                     }
                 }
 
